# nexum-public-commons

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: errors.md
scripts/: Cargo.toml  generate_stubs.py
scripts/src/: main.rs
src/nexum/: __init__.py  errors.py  errors.pyi  logging.py
tests/: conftest.py  test_errors.py  test_logging.py
