[project]
name = "nexum-commons"
description = "Common utilities for Nexum ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dioleti", email = "fabricio@dl.tec.br" }
]
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
